--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -1,3 +1,20 @@
 .paginationDot--isActive{
     background-color: black;
 }
+.sliderLayoutContainer--carouse {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .carousel .image {
+    width: 100%;
+    height: auto;
+  }
+  
+  .carousel .rich-text {
+    text-align: center;
+    margin-top: 10px;
+  }
+  
