Adjust carousel styles and content
- Adjusted the styles of the carousel and its content for improved appearance and functionality.
- Updated CSS to reflect the new styles and ensure the slider displays correctly on phon and desktop

--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -1,2 +1,10 @@
-
-
+.caretIcon{
+    color: red;
+}
+.caretIcon--custom-slider{
+    background-color: brown;
+    height: 30%;
+}
+.sliderArrows{
+    background-color: brown;
+}
