--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -1,5 +1,10 @@
 .imageElement--promotion-week-image {
-    margin: 5%;
-    padding: 10px;
-  }
-  
+  margin: 5%;
+  padding: 10px;
+}
+.imageElement--img-certicate {
+  margin-top: 19%;
+  margin-left: 28%;
+  width: 48px;
+  height: 48px;
+}
