Add CSS styling to slider pagination and integrate Rich Text component
 - formatted the CSS to show arrows in the middle part of the image
- Added the Rich Text component to the second section of the home page.

--- a/styles/configs/font-faces.css
+++ b/styles/configs/font-faces.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "lexend";
-  src: url("/assets/fonts/Lexend-VariableFont_wght.ttf");
+  font-family: "playwirte";
+  src: url("/assets/fonts/PlaywriteCU-VariableFont_wght.ttf"),url(/assets/fonts/PlaywriteCU-VariableFont_wght.ttf);
   font-weight: bold;
 }
