--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -1,20 +1,31 @@
-.paginationDot--isActive{
-    background-color: black;
+.paginationDot--isActive {
+  background-color: black;
 }
 .sliderLayoutContainer--carouse {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .carousel .image {
-    width: 100%;
-    height: auto;
-  }
-  
-  .carousel .rich-text {
-    text-align: center;
-    margin-top: 10px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel .image {
+  width: 100%;
+  height: auto;
+}
+
+.carousel .rich-text {
+  text-align: center;
+  margin-top: 10px;
+}
+.sliderLeftArrow--custom-slider {
+  width: 47px;
+  margin-bottom: 94px;
+}
+.sliderRightArrow--custom-slider {
+  width: 47px;
+  margin-bottom: 94px;
+}
+.paginationDotsContainer--custom-slider {
+  height: 50.89px;
+  top: 430px;
+}
