--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -62,21 +62,88 @@
   margin-top: 0px;
   margin-left: 12px;
 }
-
+/*------------------------------------------------section two home------------------------------*/
 .paragraph--texto-section-two-desktop {
   font-family: "lexend";
-  font-size: 16px; /* Cambié 'size' a 'font-size' para corregir la propiedad */
+  font-size: 16px;
   font-weight: bold;
   font-weight: 500;
   line-height: 16.8px;
   text-align: left;
 }
-
 .wrapper--texto-section-two-desktop {
   margin-left: 72px;
-  margin-top: 8%;
   width: 500px;
   size: 16;
   line-height: 16, 8;
   font-family: "lexend";
+}
+.wrapper--info-product-section-two {
+  font-family: "Lexend";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.8px;
+  text-align: left;
+  margin-left: 0%;
+}
+.container--info-product-section-two {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.paragraph--info-product-section-two,
+.paragraph--info-product-before-discount,
+.paragraph--info-price-product,
+.paragraph--info-shipping-product,
+.paragraph--info-product-before-discount {
+  margin: 0;
+  padding: 0;
+  margin-left: 10%;
+}
+.paragraph--info-product-before-discount {
+  font-family: "Lexend";
+  width: 68px;
+  height: 16.98px;
+  text-decoration: line-through;
+  color: #1d273466;
+  margin-left: 35px;
+  
+}
+.paragraph--info-price-product {
+  font-family: "Lexend";
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28.8px;
+  text-align: left;
+  margin-left: 35px;
+}
+.paragraph--info-shipping-product {
+  font-family: "Lexend";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.8px;
+  text-align: left;
+  color: #fa2080;
+  margin-left: 35px;
+}
+
+.link--slider_third-row--buy-button{
+  height: 40%;
+  color: black;
+  padding: 40%;
+}
+.wrapper--slider_third-row--buy-button {
+  border-radius: 8px;
+
+  height: 48px;
+  padding: 10px 0px 0px 0px;
+  gap: 10px;
+  border: 1px solid black;
+  width: 300px;
+  margin-left: 30px;
+}
+.paragraph--slider_third-row--buy-button {
+  margin-top: 0px;
+  margin-left: 12px;
 }
