--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -108,7 +108,6 @@
   text-decoration: line-through;
   color: #1d273466;
   margin-left: 35px;
-  
 }
 .paragraph--info-price-product {
   font-family: "Lexend";
@@ -128,7 +127,7 @@
   margin-left: 35px;
 }
 
-.link--slider_third-row--buy-button{
+.link--slider_third-row--buy-button {
   height: 40%;
   color: black;
   padding: 40%;
@@ -146,4 +145,30 @@
 .paragraph--slider_third-row--buy-button {
   margin-top: 0px;
   margin-left: 12px;
+}
+.paragraph--discount-button {
+  width: Hug (84px) px;
+  height: Hug (32px) px;
+  padding: 6px 12px 6px 12px;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px;
+  opacity: 0px;
+  background: #1d2734;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+  margin-left: 35px;
+}
+.paragraph--off-button {
+  width: 44px;
+  height: 32px;
+  padding: 6px 12px 6px 12px;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px solid black;
+  opacity: 0px;
+  margin-left: 94px;
 }
