--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -1,7 +1,3 @@
-.imageElement--promotion-week-image {
-  margin: 5%;
-  padding: 10px;
-}
 .imageElement--img-certicate {
   margin-top: 19%;
   margin-left: 28%;
@@ -17,8 +13,17 @@
   height: 140px;
   gap: 0px;
   opacity: 0px;
+  margin-top: -5%;
   
 }
-.container{
-  margin-bottom: 10%;
+
+.imageElement--off-button-1{
+  width: Hug (44px)px;
+height: Hug (32px)px;
+padding: 6px 12px 6px 12px;
+gap: 10px;
+border-radius: 4px 0px 0px 0px;
+border: 1px 0px 0px 0px;
+opacity: 0px;
+
 }
