Added CSS to header

--- a/styles/configs/font-faces.css
+++ b/styles/configs/font-faces.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "playwirte";
-  src: url("/assets/fonts/PlaywriteCU-VariableFont_wght.ttf"),url(/assets/fonts/PlaywriteCU-VariableFont_wght.ttf);
+  font-family: 'pacifico';
+  src: url("/assets/fonts/Pacifico.ttf");
   font-weight: bold;
 }
