--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -1,9 +1,7 @@
-.paragraph--texto-uno {
-  font-family: "Roboto";
-}
+/*--------------------------------------------css home --------------------------------*/
 .paragraph--texto-section-one-desktop {
+  font-family: pacifico;
   font-size: 16px;
-  font-weight: bold;
   line-height: 16.8px;
   text-align: left;
 }
@@ -13,7 +11,7 @@
   width: 500px;
   size: 16;
   line-height: 16, 8;
-  margin-top: -8%;
+  
   margin-bottom: 0%;
 }
 
@@ -22,13 +20,13 @@
   width: 500px;
   size: 16;
   line-height: 16, 8;
-  font-family: "lexend";
+  font-family: lexend;
 }
 .paragraph--info-product {
-  font-family: "lexend";
+  font-family: lexend;
 }
 .paragraph--text-image-slider {
-  font-family: "lexend";
+  font-family: lexend;
   font-size: 12px;
   font-weight: 300;
   line-height: 14.52px;
@@ -63,22 +61,23 @@
 }
 /*------------------------------------------------section two home------------------------------*/
 .paragraph--texto-section-two-desktop {
-  font-family: "lexend";
+  font-family: lexend;
   font-size: 16px;
   font-weight: bold;
   font-weight: 500;
   line-height: 16.8px;
   text-align: left;
+  margin-top: 120px;
 }
 .wrapper--texto-section-two-desktop {
   margin-left: 72px;
   width: 500px;
   size: 16;
   line-height: 16, 8;
-  font-family: "lexend";
+  font-family: lexend;
 }
 .wrapper--info-product-section-two {
-  font-family: "Lexend";
+  font-family: lexend;
   font-size: 14px;
   font-weight: 400;
   line-height: 16.8px;
@@ -101,7 +100,7 @@
   margin-left: 10%;
 }
 .paragraph--info-product-before-discount {
-  font-family: "Lexend";
+  font-family: lexend;
   width: 68px;
   height: 16.98px;
   text-decoration: line-through;
@@ -109,7 +108,7 @@
   margin-left: 35px;
 }
 .paragraph--info-price-product {
-  font-family: "Lexend";
+  font-family: lexend;
   font-size: 24px;
   font-weight: 600;
   line-height: 28.8px;
@@ -117,7 +116,7 @@
   margin-left: 35px;
 }
 .paragraph--info-shipping-product {
-  font-family: "Lexend";
+  font-family: lexend;
   font-size: 14px;
   font-weight: 400;
   line-height: 16.8px;
@@ -150,13 +149,65 @@
   height: Hug (32px)px;
   padding: 6px 12px 6px 12px;
   gap: 10px;
-  border-radius: 4px 0px 0px 0px;
+  border-radius: 4px;
   border: 1px 0px 0px 0px;
   opacity: 0px;
   margin-top: 0%;
+  background-color: #1D2734;
+  color: white;
 
 }
-.container--discount-button{
+.container--discount-button {
   margin-left: 35px;
-  margin-top: 330px;
+  margin-top: 10px;
+}
+
+/* .paragraph--texto-section-header-desktop{
+  font-family: Lexend;
+font-size: 12px;
+font-weight: 300;
+line-height: 15px;
+text-align: left;
+
+} */
+.container--texto-header-information{
+  width:1,280px;
+  height: 56px;
+  padding: 8px;
+  gap: 48px;
+  opacity: 0px;
+  margin-left: 0px;
+  white-space: nowrap; 
+  overflow: hidden;
+}
+.paragraph--texto-header-information{
+  font-family: Lexend;
+font-size: 15px;
+font-weight: 400;
+line-height: 15px;
+text-align: right
+}
+
+.wrapper--icon-header-section-one-information{
+  background-color: #1D2734;
+  width: 80px;
+  height: 40px;
+  gap: 10px;
+  border-radius: 40px ;
+  border: 1px;
+  opacity: 0px;  
+  color: white;
+}
+.paragraph--icon-header-section-one-information{
+  font-family: Lexend;
+font-size: 14px;
+font-weight: 300;
+line-height: 17.5px;
+text-align: center;
+margin-top: 10px;
+
+}
+
+.container--icon-header-section-one-information{
+  margin-top: 20px;
 }
