--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -1,4 +1,4 @@
-@import 'styles/custom-slider.css';
+
 
 .paginationDot--isActive {
   background-color: black;
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 10%;
 }
 
 .carousel .image {
