--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -4,6 +4,8 @@
   font-size: 16px;
   line-height: 16.8px;
   text-align: left;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .wrapper--texto-section-one-desktop {
@@ -11,7 +13,6 @@
   width: 500px;
   size: 16;
   line-height: 16, 8;
-  
   margin-bottom: 0%;
 }
 
@@ -68,6 +69,7 @@
   line-height: 16.8px;
   text-align: left;
   margin-top: 120px;
+  margin-bottom: 30px;
 }
 .wrapper--texto-section-two-desktop {
   margin-left: 72px;
