--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -7,6 +7,7 @@
   text-align: left;
   margin-bottom: 30px;
   margin-top: 30px;
+  color: brown;
 }
 
 .wrapper--texto-section-one-desktop {
@@ -50,7 +51,6 @@
   text-align: center;
 }
 .wrapper--slider_third-row--button {
-  background-color: #1d2734;
   border-radius: 40px;
   width: 134px;
   height: 43px;
@@ -82,90 +82,8 @@
   line-height: 16, 8;
   font-family: lexend;
 }
-.wrapper--info-product-section-two {
-  font-family: lexend;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16.8px;
-  text-align: left;
-  margin-left: 0%;
-}
-.container--info-product-section-two {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
 
-.paragraph--info-product-section-two,
-.paragraph--info-product-before-discount,
-.paragraph--info-price-product,
-.paragraph--info-shipping-product,
-.paragraph--info-product-before-discount {
-  margin: 0;
-  padding: 0;
-  margin-left: 10%;
-}
-.paragraph--info-product-before-discount {
-  font-family: lexend;
-  width: 68px;
-  height: 16.98px;
-  text-decoration: line-through;
-  color: #1d273466;
-  margin-left: 35px;
-}
-.paragraph--info-price-product {
-  font-family: lexend;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 28.8px;
-  text-align: left;
-  margin-left: 35px;
-}
-.paragraph--info-shipping-product {
-  font-family: lexend;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16.8px;
-  text-align: left;
-  color: #fa2080;
-  margin-left: 35px;
-}
 
-.link--slider_third-row--buy-button {
-  height: 40%;
-  color: black;
-  padding: 40%;
-}
-.wrapper--slider_third-row--buy-button {
-  border-radius: 8px;
-
-  height: 48px;
-  padding: 10px 0px 0px 0px;
-  gap: 10px;
-  border: 1px solid black;
-  width: 300px;
-  margin-left: 30px;
-}
-.paragraph--slider_third-row--buy-button {
-  margin-top: 0px;
-  margin-left: 12px;
-}
-.paragraph--discount-button {
-  width: Hug (84px) px;
-  height: Hug (32px) px;
-  padding: 6px 12px 6px 12px;
-  gap: 10px;
-  border-radius: 4px;
-  border: 1px 0px 0px 0px;
-  opacity: 0px;
-  margin-top: 0%;
-  background-color: #1d2734;
-  color: white;
-}
-.container--discount-button {
-  margin-left: 35px;
-  margin-top: 10px;
-}
 
 /* .paragraph--texto-section-header-desktop{
   font-family: Lexend;
