fix styles and conflicts

--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -17,3 +17,6 @@ opacity: 0px;
     justify-content: center; 
     align-items: center
 }
+.flexRow--header-container-menu-desktop{
+  overflow: auto;
+}
