Product section is added, its CSS styles and styles are adjusted in header

--- a/styles/css/home/vtex.minicart.css
+++ b/styles/css/home/vtex.minicart.css
@@ -1,3 +1,9 @@
-.minicartIconContainer--minicart-header{
-    color: black;
+.minicartIconContainer {
+  width: 16.67px;
+  height: 16.67px;
+  top: 1.67px;
+  left: 0.83px;
+  gap: 0px;
+  opacity: 0px;
+  color: #1d2734;
 }
