--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -6,7 +6,6 @@
   text-align: left;
   margin-bottom: 30px;
   margin-top: 30px;
-  background-color: rgb(255, 132, 0)
 }
 
 .wrapper--texto-section-one-desktop {
@@ -48,6 +47,7 @@
   font-weight: 400;
   line-height: 15px;
   text-align: center;
+  color: white;
 }
 .wrapper--slider_third-row--button {
   background-color: #1d2734;
@@ -97,75 +97,6 @@
   gap: 10px;
 }
 
-.paragraph--info-product-section-two,
-.paragraph--info-product-before-discount,
-.paragraph--info-price-product,
-.paragraph--info-shipping-product,
-.paragraph--info-product-before-discount {
-  margin: 0;
-  padding: 0;
-  margin-left: 10%;
-}
-.paragraph--info-product-before-discount {
-  font-family: lexend;
-  width: 68px;
-  height: 16.98px;
-  text-decoration: line-through;
-  color: #1d273466;
-  margin-left: 35px;
-}
-.paragraph--info-price-product {
-  font-family: lexend;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 28.8px;
-  text-align: left;
-  margin-left: 35px;
-}
-.paragraph--info-shipping-product {
-  font-family: lexend;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16.8px;
-  text-align: left;
-  color: #fa2080;
-  margin-left: 35px;
-}
-
-.link--slider_third-row--buy-button {
-  height: 40%;
-  color: black;
-  padding: 40%;
-}
-.wrapper--slider_third-row--buy-button {
-  border-radius: 8px;
-  height: 48px;
-  padding: 10px 0px 0px 0px;
-  gap: 10px;
-  border: 1px solid black;
-  width: 300px;
-  margin-left: 30px;
-}
-.paragraph--slider_third-row--buy-button {
-  margin-top: 0px;
-  margin-left: 12px;
-}
-.paragraph--discount-button {
-  width: Hug (84px) px;
-  height: Hug (32px) px;
-  padding: 6px 12px 6px 12px;
-  gap: 10px;
-  border-radius: 4px;
-  border: 1px 0px 0px 0px;
-  opacity: 0px;
-  margin-top: 0%;
-  background-color: #1d2734;
-  color: white;
-}
-.container--discount-button {
-  margin-left: 35px;
-  margin-top: 10px;
-}
 
 .container--texto-header-information {
   width: 1, 280px;
@@ -179,10 +110,10 @@
 }
 .paragraph--texto-header-information {
   font-family: Lexend;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 15px;
-  text-align: right;
+font-size: 12px;
+font-weight: 400;
+line-height: 15px;
+text-align: right;
 }
 
 .wrapper--icon-header-section-one-information {
@@ -206,4 +137,15 @@
 
 .container--icon-header-section-one-information {
   margin-top: 20px;
+}
+
+.paragraph--texto-section-header-desktop{
+  font-family: Lexend;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 15px;
+  text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: pre;
 }
