--- a/styles/css/home/vtex.login.css
+++ b/styles/css/home/vtex.login.css
@@ -1,18 +1,24 @@
-.container{
-background: #1D2734;
-width: Fixed (80px)px;
-height: Fixed (40px)px;
-top: 24px;
-left: 264px;
-padding: 10px;
-gap: 10px;
-border-radius: 40px;
-border: 1px;
-opacity: 0px;
-
-
+.container {
+  background: #1d2734;
+  height: 40px;
+  top: 24px;
+  gap: 10px;
+  border-radius: 40px;
+  border: 1px;
+  opacity: 0px;
+  margin-top: 5%;
+  margin-left: 80%;
 }
 
-.label{
-    color: white;
+.label {
+  color: white;
+  display: block;
+  width: 40px !important;
+  height: 20px !important;
+  padding-right: 0% !important;
+  padding-left: 10px !important;
+  text-transform: lowercase;
+}
+.label::first-letter {
+  text-transform: capitalize;
 }
