--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -6,6 +6,7 @@
   text-align: left;
   margin-bottom: 30px;
   margin-top: 30px;
+  font-weight: normal !important;
 }
 
 .wrapper--texto-section-one-desktop {
