--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -58,11 +58,12 @@
   margin-bottom: 94px
 }
 .sliderLeftArrow{
- left: 20px;
+ left: -40px;
 }
 .sliderRightArrow{
- right: 20px;
+ right: -40px;
 }
+
 
 .paginationDotsContainer--custom-slider-shelf {
   text-align: center;
@@ -96,4 +97,15 @@
   gap: 0px;
   opacity: 0px;
   margin-top: 10px !important;
+}
+
+@media (max-width: 780px) {
+  
+  .sliderLeftArrow{
+    display: none;
+   }
+   .sliderRightArrow{
+    display: none;
+   }
+   
 }
