--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -109,3 +109,10 @@
    }
    
 }
+
+.slideChildrenContainer--custom-slider-shelf{
+  padding: 10px;
+}
+.slide--custom-slider{
+  padding: 10px;
+}
