--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -56,10 +56,48 @@
   padding: 6px 12px 6px 12px;
   gap: 10px;
   border-radius: 4px;
-  border: 1px ;
+  border: 1px;
   opacity: 0px;
   position: absolute;
   bottom: 100%;
   right: 64%;
-  
+}
+
+.autoCompleteOuterContainer--icon-header-section-one-information
+  :global(.vtex-input-prefix__group) {
+  width: 280px;
+  height: 40px;
+  padding: 11px 16px 11.76px 16px;
+  gap: 0px;
+  border-radius: 40px;
+  opacity: 0px;
+  background-color: #f5f4f6;
+}
+.autoCompleteOuterContainer--icon-header-section-one-information
+  :global(.vtex-input__suffix) {
+  background: #f5f4f6;
+}
+
+.infoCardContainer--info-card-home {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.imageElement--image-info-card {
+  order: 1;
+  width: 324px !important;
+  height: 186.62px !important;
+  gap: 8px;
+  opacity: 0px;
+}
+
+.infoCardContainer--info-card-home {
+  order: 2;
+}
+
+.imageElement--certificate-info-card-home {
+  width: 48.38px;
+  height: 48.38px;
+  left: 13.82px;
 }
