--- a/styles/css/home/vtex.wish-list.css
+++ b/styles/css/home/vtex.wish-list.css
@@ -1,26 +1,18 @@
-.outline{
+
+.wishlistIcon--favorite {
+    width: 13.67px;
+    height: 14.29px;
+    top: 2.5px;
+    left: 1.67px;
+    gap: 0px;
+    opacity: 0px;
+    
+}
+
+.wishlistIconContainer--favorite :global(.vtex-button){
+    border-color:  black;
+    margin-left: 55%;
+}
+.wishlistIcon--favorite{
     border-color: black;
 }
-.wishlistIconContainer{
-    margin-left: 180px !important;
-    border: 1 solid black;
-}
-
-.iconSize{
-    size: 10px;
-}
-.outline{
-    border: 1 solid black;
-}
-.wishlistIcon--favorite {
-    width: 30px;
-    height: 30px;
-    border: 2px solid #060606;
-    border-radius: 0%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    cursor: pointer;
-}
-
