--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -1,12 +1,14 @@
 .imageElement--img-certicate {
   margin-top: 19%;
-  margin-left: 28%;
+  margin-left: 20%;
   width: 48px;
   height: 48px;
 }
 
 .imageElement--container-product-image {
-  width: 75%;
+  width: 324px;
+  height: 186.62px;
+
 }
 .imageElement--container-product-image-section-two {
   width: 178px;
@@ -65,7 +67,6 @@
 
 .autoCompleteOuterContainer--icon-header-section-one-information
   :global(.vtex-input-prefix__group) {
-  width: 280px;
   height: 40px;
   padding: 11px 16px 11.76px 16px;
   gap: 0px;
@@ -84,20 +85,6 @@
   align-items: flex-start;
 }
 
-.imageElement--image-info-card {
-  order: 1;
-  width: 324px !important;
-  height: 186.62px !important;
-  gap: 8px;
-  opacity: 0px;
-}
-
-.infoCardContainer--info-card-home {
-  order: 2;
-}
-
-.imageElement--certificate-info-card-home {
-  width: 48.38px;
-  height: 48.38px;
-  left: 13.82px;
+.headerRowContentContainer--container-menu-icon-globa{
+  display: -webkit-box;
 }
