--- a/styles/css/home/vtex.product-summary.css
+++ b/styles/css/home/vtex.product-summary.css
@@ -11,7 +11,7 @@
   text-overflow: ellipsis;
   margin-right: 7px;
 }
-.buyButton--custom-buy-button :global(.vtex-button) {
+/* .buyButton--custom-buy-button :global(.vtex-button) {
   background-color: transparent;
   width: Fixed (212px)px;
   height: Fixed (48px)px;
@@ -21,7 +21,7 @@
   border: 1px solid #1D2734;
   opacity: 0px;
   
-}
+} */
 
 .buyButtonText--custom-buy-button {
   color: black;
