--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -157,6 +157,7 @@
   width: 10.76px;
   height: 7.53px;
   padding-top: 10px;
+  padding: 10px;
 }
 .container--texto-section-one-desktop{
   max-width: 1280px;
