--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -88,3 +88,10 @@
 .headerRowContentContainer--container-menu-icon-global{
   display: -webkit-box;
 }
+.searchBarContainer{
+  margin-top: 15px;
+}
+
+.logoContainer:global(.vtex-store-components-3-x-logoImage){
+margin-top: 15px;
+}
