--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -1,6 +1,6 @@
 .imageElement--img-certicate {
   margin-top: 19%;
-  margin-left: 20%;
+  margin-left: 35%;
   width: 48px;
   height: 48px;
 }
@@ -94,4 +94,11 @@
 
 .logoContainer:global(.vtex-store-components-3-x-logoImage){
 margin-top: 15px;
+}
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .container{
+    width: 900px;
+  }
 }
